--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,4 @@ notebooks/criteo_advertising/train.txt
 notebooks/ecommerce_behaviour/dataset/.DS_Store
 notebooks/ecommerce_behaviour/.DS_Store
 notebooks/ecommerce_behaviour/dataset/.DS_Store
+.DS_Store
