--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,5 @@ notebooks/ecommerce_behaviour/dataset/.DS_Store
 notebooks/ecommerce_behaviour/.DS_Store
 notebooks/ecommerce_behaviour/dataset/.DS_Store
 .DS_Store
+.DS_Store
+.DS_Store
