updated pre proc and added user profiling

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,4 @@ notebooks/ecommerce_behaviour/dataset/.DS_Store
 .DS_Store
 .DS_Store
 .DS_Store
+non_supervised_analysis/notebooks/dataset_3/data/instacart_pre_proc_sample.zip
