--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,4 @@ notebooks/ecommerce_behaviour/dataset/.DS_Store
 .DS_Store
 .DS_Store
 non_supervised_analysis/notebooks/dataset_3/data/instacart_pre_proc_sample.zip
+non_supervised_analysis/notebooks/dataset_3/G02_notebook_dataset*.ipynb
